Stop text from overflowing in guided view

--- a/static/vkg.css
+++ b/static/vkg.css
@@ -455,6 +455,12 @@ a
     background: wheat;
 }
 
+.nodeCard>*{
+    overflow: scroll;
+    width: auto;
+    display: block;
+}
+
 #guidedview img {
     max-width: 100%;
     max-height: 300px;
